--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title><%= htmlWebpackPlugin.options.title %></title>
-  <script src="./vendor/rdflib.min.js"></script>
-  <script src="./vendor/solid-query-ldflex.rdflib.js"></script>
-  <script src="./vendor/solid-file-client.bundle.js"></script>
-  <script src="./vendor/shex-core-browserify.min.js"></script>
-  <script src="./vendor/shex-loader-browserify.min.js"></script>
-  <script src="./vendor/shex-parser-browserify.min.js"></script>
+  <script src="/vendor/rdflib.min.js"></script>
+  <script src="/vendor/solid-query-ldflex.rdflib.js"></script>
+  <script src="/vendor/solid-file-client.bundle.js"></script>
+  <script src="/vendor/shex-core-browserify.min.js"></script>
+  <script src="/vendor/shex-loader-browserify.min.js"></script>
+  <script src="/vendor/shex-parser-browserify.min.js"></script>
 </head>
 <body>
   <noscript>
