--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="description" CONTENT="Popock, bring your Solid Pod in your pocket">
+  <meta name="keywords" CONTENT="Solid, Pod, mobile, decentralized, data, linked data, rdf, turtle, collaboration">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title><%= htmlWebpackPlugin.options.title %></title>
   <script src="./vendor/rdflib.min.js"></script>
